--- a/Lesson3/style.css
+++ b/Lesson3/style.css
@@ -20,6 +20,15 @@
     border: 2px solid rgb(24, 209, 117);
     border-radius: 25px;
 }
+
+.btn__color{
+    margin:  auto 40em;
+    width: 150px;
+    height: 8vh;
+    background-color: rgb(19, 218, 174);
+    border: 2px solid rgb(24, 209, 117);
+    border-radius: 25px;
+}
 section {
     width: 100%;
     height: 150vh;  
