--- a/Lesson3/style.css
+++ b/Lesson3/style.css
@@ -42,3 +42,14 @@ section {
 .s3{
     background-color: lightcoral;
 }
+.input__section{
+    width: 300px;
+    border: 2px solid saddlebrown;
+    padding: 50px;
+}
+input{
+    margin: 10px;
+    width: 200px;
+    height: 30px;
+    border-radius: 25px;
+}
